@@ -1,3 +1,8 @@
+2012-02-02  Lars Ingebrigtsen  <larsi@gnus.org>
+
+	* shr.el (shr-put-image): Remove underlines from sliced images.
+	(shr-zoom-image): Compute the region to be replaced more correctly.
+
 2012-02-02  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* gnus-msg.el (gnus-gcc-self-resent-messages): New user option.
